<resources>
    <string name="app_name">coffeApp</string>
    <string name="type_your_email">Introdueix mail</string>
    <string name="type_your_password">Introdueix contrasenya</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">No estas registrat, registrat!</string>
    <string name="retype_your_password">Torna a escriure la teva contrasenya</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Estas registrat inicia sesió!</string>
    <string name="button">Button</string>
    <string name="initButton">Button</string>
    <string name="type_your_emaill">Introdueix mail</string>
    <string name="type_your_passwordd">Introdueix contrasenya</string>
    <string name="title_activity_initial">InitialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_init">init</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Coffe App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Nav</string>
    <string name="action_settings">FAQS</string>

    <string name="menu_home">Menu inicial</string>
    <string name="menu_demanarPlats">Demanar plats</string>
    <string name="menu_pagarComanda">Pagar comanda</string>
    <string name="PantallaInicialButton">Button</string>
</resources>