<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.estebi.coffeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.estebi.coffeapp.ui.DemanarPlats.DemanarPlatsFragment"
        android:label="@string/menu_demanarPlats"
        tools:layout="@layout/fragment_demanar_plats" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.estebi.coffeapp.ui.PagarComanda.PagarComandaFragment"
        android:label="@string/menu_pagarComanda"
        tools:layout="@layout/fragment_slideshow" />
</navigation>